Fixed Header Spacing

--- a/work-page/src/styles/components/_header.scss
+++ b/work-page/src/styles/components/_header.scss
@@ -16,6 +16,11 @@
 }
 
 .work-page__header--navigation {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    width: 40%;
+    gap: 16px;
+
     a {
         color: $defaultFontColor;
         text-decoration: none;
